nginxx/nginx-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-cd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
