nginxx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cd
spec:
  type: ClusterIP
  selector:
    app: nginx-cd
  ports:
    - port: 80
      targetPort: 80
