nginxx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-cd
spec:
 rules:
   - host: nginx-cd.karim-devops.lab
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx-cd
               port:
                number: 80
